Stronger band-aid to prevent table splitting inside columns bug 362275 r/sr=roc